--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
             POSTGRES_DB: personwallet
+            TZ: America/Sao_Paulo
+        command: postgres -c "timezone=America/Sao_Paulo"
         ports:
             - '5434:5432'
         volumes:
